test/conformance/chainsaw/validating-admission-policy-reports/background/generated-validating-admission-policy-fail/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-fail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container
        image: public.ecr.aws/docker/library/nginx
