test/conformance/chainsaw/validating-admission-policy-reports/background/generated-validating-admission-policy-fail/report-assert.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  ownerReferences:
  - apiVersion: apps/v1
    kind: Deployment
    name: deployment-fail
results:
- message: Deployment labels must be env=prod
  policy: vpol-check-deployment-labels
  result: fail
  source: ValidatingAdmissionPolicy
summary:
  error: 0
  fail: 1
  pass: 0
  skip: 0
  warn: 0
