test/conformance/chainsaw/validating-admission-policy-reports/background/generated-validating-admission-policy-fail/validatingadmissionpolicy-assert.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
    reports.kyverno.io/enabled: "true"
  name: vpol-check-deployment-labels
  ownerReferences:
  - apiVersion: policies.kyverno.io/v1beta1
    kind: ValidatingPolicy
    name: check-deployment-labels
