test/conformance/chainsaw/validating-admission-policy-reports/background/generated-validating-admission-policy-fail/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: generated-validating-admission-policy-fail
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
  - name: step-02
    try:
    - assert:
        file: validatingadmissionpolicy-assert.yaml
  - name: step-03
    try:
    - apply:
        file: deployment.yaml
    - assert:
        file: deployment-assert.yaml
  - name: step-04
    try:
    - assert:
        file: report-assert.yaml
